[gd_scene load_steps=6 format=3 uid="uid://c6id0byk428s2"]

[ext_resource type="Script" uid="uid://crw8gqgf76t4b" path="res://Utility/Keybinds/keybind_container.gd" id="1_obdxr"]
[ext_resource type="Script" uid="uid://rpqn1n382co5" path="res://Utility/Keybinds/keybind_button.gd" id="2_6r32r"]
[ext_resource type="Script" uid="uid://c0abbd6ssee0y" path="res://addons/controller_icons/objects/ControllerIconTexture.gd" id="2_10jco"]

[sub_resource type="Texture2D" id="Texture2D_10jco"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_10jco")
path = "move_right"
show_mode = 0
force_controller_icon_style = -1
force_type = 1
force_device = 16

[sub_resource type="Texture2D" id="Texture2D_5jnjn"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_10jco")
path = "move_right"
show_mode = 0
force_controller_icon_style = -1
force_type = 2
force_device = 16

[node name="KeybindContainer" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 77.0
grow_horizontal = 2
script = ExtResource("1_obdxr")
label_name = "Move Up"
action_name = "move_right"

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 2
text = "Move Up"

[node name="KeyboardBtn" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "D"
icon = SubResource("Texture2D_10jco")
icon_alignment = 1
expand_icon = true
script = ExtResource("2_6r32r")
action = "move_right"

[node name="ControllerBtn" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
disabled = true
toggle_mode = true
text = "D"
icon = SubResource("Texture2D_5jnjn")
icon_alignment = 1
expand_icon = true
script = ExtResource("2_6r32r")
action = "move_right"
